ch21/todo-list/web/ingress/todo-web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-web
  labels:
    kiamol: ch21
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: todo-list
    component: web
